# dudnikov-HW-ABC-2

./: README.md
source_code/: Bus.cpp  Bus.h  CMakeLists.txt  Car.cpp  Car.h  Container.cpp  Container.h  Random.cpp  Random.h  RoadTransport.cpp  RoadTransport.h  TableOutput.cpp  TableOutput.h  Truck.cpp  Truck.h  main.cpp
tests_input/: in2.txt  in4.txt  in5.txt  in6.txt  Уточнение.txt
tests_output/: out10.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out8.txt  out9.txt
